--- a/index.html
+++ b/index.html
@@ -63,11 +63,12 @@
 <div class="container">
     <div class="row">
   <div class="col-md-2"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple126/v4/d9/d5/12/d9d512c2-b920-f5dc-7d8f-665fcb823f11/AppIcon-1x_U007emarketing-0-2-0-85-220.png/1200x600wa.png" alt="company logo" class="img-fluid"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2"></div>
+  <div class="col-md-2"><img src="https://flyclipart.com/thumb2/amazon-icon-myiconfinder-499813.png" alt="company logo" class="img-fluid"></div>
+  <div class="col-md-2"><img src="" alt=""></div>
+  <div class="col-md-2"><img src="" alt=""></div>
+  <div class="col-md-2"><img src="" alt=""></div>
+  <div class="col-md-2"><img src="" alt=""></div>
+
 </div>
 
 
