--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
            </div>
 
         <div class="col-md-6">
-        <h1 class="my-3">Inro to Goldfish</h1></div>
+        <h1 class="my-3">Intro to Goldfish</h1></div>
             <p class="my-4">
-        Goldfish grow to be very big fish like my biggest goldfish Kapitän. Lenny is almost Kap size. The other four are considered my smallest fish, but Ig and Bishop 
+        Goldfish grow to be very big fish like my biggest goldfish Kapitän. Lenny is almost Kap's size. The other four are considered my smallest fish, but Ig and Bishop 
         are really medium in size. Arkham and Gotham are my smallest goldfish.
  </p>
  <ul>
@@ -91,7 +91,7 @@
  </div>
     </div>
 </div>
-put wave back
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0084b0" fill-opacity="1" d="M0,128L48,122.7C96,117,192,107,288,133.3C384,160,480,224,576,224C672,224,768,160,864,149.3C960,139,1056,181,1152,170.7C1248,160,1344,96,1392,64L1440,32L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
 </section>
 
 <section class="icons">
@@ -111,7 +111,30 @@ put wave back
   </div>
 </section>
 
-
+<section class="gallery">
+  <div class="conatiner">
+    <div class="row">
+      <div class="col-md-10">
+        <h1>Take a look at those fish!</h1>
+        <p>
+          The fish are all in different size tanks, like Ig and Bishop are in a 20 gallon long, Kap and Lenny are in a 30 gallon and finally Arkham and Gotham are in a 10 
+          gallon.
+        </p>
+      </div>
+    </div>
+  <div class="row my-3 g-3">
+    <div class="col-md-4"><img src="file:///C:/Users/Anaiya.Newby/Pictures/Saved%20Pictures/ag.jpg" alt="Gallery image" class="image-fluid"></div>
+    <div class="col-md-4"><img src="file:///C:/Users/Anaiya.Newby/Pictures/Saved%20Pictures/Fish.jpg" alt="Gallery image" class="image-fluid"></div>
+    <div class="col-md-4"><img src="file:///C:/Users/Anaiya.Newby/Pictures/Saved%20Pictures/Kap%20and%20Lenny.jpg" alt="Gallery image" class="image-fluid"></div>
+  </div>
+  </div>
+  <div class="row mt-5 justify-content-end ">
+    <div class="col-md-2">
+      <button type="button" class="btn btn-outline-success">Goldfish</button>
+    </div>
+  </div>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0084b0" fill-opacity="1" d="M0,0L48,48C96,96,192,192,288,218.7C384,245,480,203,576,202.7C672,203,768,245,864,256C960,267,1056,245,1152,245.3C1248,245,1344,267,1392,277.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+</section>
 
 
 
