--- a/index.html
+++ b/index.html
@@ -136,7 +136,31 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0084b0" fill-opacity="1" d="M0,0L48,48C96,96,192,192,288,218.7C384,245,480,203,576,202.7C672,203,768,245,864,256C960,267,1056,245,1152,245.3C1248,245,1344,267,1392,277.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 
-
+<section class="services gradient">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <h1>Themed Fish Tanks</h1>
+        <p>This is a spongebob themed fish tank that would be a good home for Moillies or Danos.</p>
+      </div>
+      <div class="col-md-6"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzLlZUxxNeyUGqQJIuvkpD8L-i0cRTZlb48w&usqp=CAU" alt=""></div>
+      <div class="col-md-6"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkhIzSYL7o345JL2eyaFN6qo1M01Zu9SkkNw&usqp=CAU" alt=""></div>
+      <div class="col-md-6">
+        <h1>Another themed fish tank</h1>
+        <p>
+          This another themed fish, but with less hideouts.
+        </p>
+      </div>
+      <div class="col-md-6">
+        <h1>Planted Tank</h1>
+        <p>
+          This is a picture of a lady claning out a planted tank with a vaccum gravel.
+        </p>
+      </div>
+      <div class="col-md-6"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShCqIwiDLVphk0zeglkupiAs9JIdQd80t2GA&usqp=CAU" alt=""></div>
+    </div>
+  </div>
+</section>
 
 
 
